[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://scripts/teleporter.gd" type="Script" id=2]



[node name="teleporter_1" type="Node2D"]
script = ExtResource( 2 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 208, 32, 32 )

[node name="on" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 127, 175, 34, 34 )

[node name="StaticBody2D" type="Area2D" parent="."]
collision_mask = 65

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -0.0440178, -12.5192, 12.504, -0.00430679, -0.0440273, 12.6761, -12.8569, -0.13674 )

[node name="cooldown" type="Timer" parent="."]
[connection signal="body_entered" from="StaticBody2D" to="." method="_on_StaticBody2D_body_entered"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
